<resources>
    <string name="app_name">GamalAdmin</string>
    <string name="number">מספר לקוח</string>
    <string name="v600">0508263748</string>
    <string name="_131">שדרות ירושלים 31</string>
    <string name="_31">שדרות ירושלים 31</string>
    <string name="date">תאריך הזמנה</string>
    <string name="_10_30">10:30</string>
    <string name="_10_12_19">10.12.19</string>
    <string name="_10_30_pm">10:30 PM</string>
    <string name="_10_30_pm_10_12_19">10:30 PM 10.12.19</string>
    <string name="ordername">ההזמנה בוצעה :</string>
    <string name="_543">שדרות ירושלים בני יצחר יעקוב 543</string>
    <string name="dest">כתובת יעד :</string>
    <string name="image">image</string>
    <string name="dep">כתובת איסוף :</string>
    <string name="f1">שדרות ירושלים בני יצחר יעקוב</string>
    <string name="f2">חזרה</string>
    <string name="stt">חרוב רחל</string>
</resources>
